z-index spotlight fix

--- a/src/components/Mainpage/css/mainpage.css
+++ b/src/components/Mainpage/css/mainpage.css
@@ -209,18 +209,18 @@ p {
     transform-origin: 0% 100%;
   }
 
-  #menuToggle input:checked~span {
+  #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(0px, 2px);
     background: white;
   }
 
-  #menuToggle input:checked~span:nth-last-child(3) {
+  #menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
 
-  #menuToggle input:checked~span:nth-last-child(2) {
+  #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
   }
 
@@ -247,7 +247,7 @@ p {
     width: 250px;
   }
 
-  #menuToggle input:checked~ul {
+  #menuToggle input:checked ~ ul {
     transform: none;
   }
 
@@ -432,18 +432,18 @@ p {
     transform-origin: 0% 100%;
   }
 
-  #menuToggle input:checked~span {
+  #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(0px, 2px);
     background: white;
   }
 
-  #menuToggle input:checked~span:nth-last-child(3) {
+  #menuToggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
   }
 
-  #menuToggle input:checked~span:nth-last-child(2) {
+  #menuToggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
   }
 
@@ -470,7 +470,7 @@ p {
     width: 250px;
   }
 
-  #menuToggle input:checked~ul {
+  #menuToggle input:checked ~ ul {
     transform: none;
   }
 
@@ -566,17 +566,14 @@ p {
     padding: 20px !important;
   }
 
-  .letter{
+  .letter {
     width: 11.11% !important;
   }
 }
 
-
 .searchinputMobile {
   display: none;
 }
-
-
 
 /*---*/
 
@@ -712,7 +709,7 @@ li a {
   width: 90px;
 }
 
-.menu-item>.anchor {
+.menu-item > .anchor {
   color: #fff;
   font-size: 16px;
   padding-left: 15px;
@@ -798,7 +795,6 @@ li a {
   height: 55px;
 }
 
-
 .dropbtn:hover {
   color: #f4ce24;
   background-color: #0c2039;
@@ -848,17 +844,15 @@ li a {
   height: 50px;
 }
 
-.homebtn{
+.homebtn {
   padding: 16px;
 }
 
-.prembtn{
+.prembtn {
   padding: 16px;
   width: 207px !important;
   white-space: nowrap;
 }
-
-
 
 /*---*/
 
@@ -890,7 +884,8 @@ li a {
 } */
 
 .carousel-control-prev-icon {
-  width: 3rem;
+  z-index: 999;
+  width: 4rem;
   height: 3rem;
   margin-left: 200px;
   border: 7px solid rgba(0, 0, 0, -2.6);
@@ -902,7 +897,8 @@ li a {
 }
 
 .carousel-control-next-icon {
-  width: 3rem;
+  z-index: 999;
+  width: 4rem;
   height: 3rem;
   margin-right: 200px;
   border: 7px solid rgba(0, 0, 0, -2.6);
@@ -913,7 +909,7 @@ li a {
   display: none;
 }
 
-.carouselItem:hover span{
+.carouselItem:hover span {
   cursor: pointer;
   transition: unset;
   display: block;
@@ -926,7 +922,7 @@ li a {
   width: 100%;
   max-width: 800px;
   min-width: 500px;
-  z-index: 50;
+  z-index: 1;
   left: unset !important;
   right: unset !important;
   display: flex;
@@ -963,49 +959,52 @@ li a {
 
 .gradient {
   position: relative;
-  z-index: 5;
   border: none;
   width: 100%;
   max-width: 1600px;
   margin: -305px auto;
   height: 310px;
-  background: linear-gradient(0deg,
-      #030f1f 0,
-      rgba(3, 15, 31, 0.987) 4.3%,
-      rgba(3, 15, 31, 0.951) 9.2%,
-      rgba(3, 15, 31, 0.896) 14.6%,
-      rgba(3, 15, 31, 0.825) 20.5%,
-      rgba(3, 15, 31, 0.741) 26.8%,
-      rgba(3, 15, 31, 0.648) 33.5%,
-      rgba(3, 15, 31, 0.55) 40.4%,
-      rgba(3, 15, 31, 0.45) 47.6%,
-      rgba(3, 15, 31, 0.352) 55%,
-      rgba(3, 15, 31, 0.259) 62.5%,
-      rgba(3, 15, 31, 0.175) 70.1%,
-      rgba(3, 15, 31, 0.104) 77.7%,
-      rgba(3, 15, 31, 0.049) 85.2%,
-      rgba(3, 15, 31, 0.013) 92.7%,
-      rgba(3, 15, 31, 0));
+  background: linear-gradient(
+    0deg,
+    #030f1f 0,
+    rgba(3, 15, 31, 0.987) 4.3%,
+    rgba(3, 15, 31, 0.951) 9.2%,
+    rgba(3, 15, 31, 0.896) 14.6%,
+    rgba(3, 15, 31, 0.825) 20.5%,
+    rgba(3, 15, 31, 0.741) 26.8%,
+    rgba(3, 15, 31, 0.648) 33.5%,
+    rgba(3, 15, 31, 0.55) 40.4%,
+    rgba(3, 15, 31, 0.45) 47.6%,
+    rgba(3, 15, 31, 0.352) 55%,
+    rgba(3, 15, 31, 0.259) 62.5%,
+    rgba(3, 15, 31, 0.175) 70.1%,
+    rgba(3, 15, 31, 0.104) 77.7%,
+    rgba(3, 15, 31, 0.049) 85.2%,
+    rgba(3, 15, 31, 0.013) 92.7%,
+    rgba(3, 15, 31, 0)
+  );
 }
 
 .gradient::after {
-  background: linear-gradient(0deg,
-      #030f1f 0,
-      rgba(3, 15, 31, 0.987) 4.3%,
-      rgba(3, 15, 31, 0.951) 9.2%,
-      rgba(3, 15, 31, 0.896) 14.6%,
-      rgba(3, 15, 31, 0.825) 20.5%,
-      rgba(3, 15, 31, 0.741) 26.8%,
-      rgba(3, 15, 31, 0.648) 33.5%,
-      rgba(3, 15, 31, 0.55) 40.4%,
-      rgba(3, 15, 31, 0.45) 47.6%,
-      rgba(3, 15, 31, 0.352) 55%,
-      rgba(3, 15, 31, 0.259) 62.5%,
-      rgba(3, 15, 31, 0.175) 70.1%,
-      rgba(3, 15, 31, 0.104) 77.7%,
-      rgba(3, 15, 31, 0.049) 85.2%,
-      rgba(3, 15, 31, 0.013) 92.7%,
-      rgba(3, 15, 31, 0));
+  background: linear-gradient(
+    0deg,
+    #030f1f 0,
+    rgba(3, 15, 31, 0.987) 4.3%,
+    rgba(3, 15, 31, 0.951) 9.2%,
+    rgba(3, 15, 31, 0.896) 14.6%,
+    rgba(3, 15, 31, 0.825) 20.5%,
+    rgba(3, 15, 31, 0.741) 26.8%,
+    rgba(3, 15, 31, 0.648) 33.5%,
+    rgba(3, 15, 31, 0.55) 40.4%,
+    rgba(3, 15, 31, 0.45) 47.6%,
+    rgba(3, 15, 31, 0.352) 55%,
+    rgba(3, 15, 31, 0.259) 62.5%,
+    rgba(3, 15, 31, 0.175) 70.1%,
+    rgba(3, 15, 31, 0.104) 77.7%,
+    rgba(3, 15, 31, 0.049) 85.2%,
+    rgba(3, 15, 31, 0.013) 92.7%,
+    rgba(3, 15, 31, 0)
+  );
 }
 
 /*Card*/
@@ -1138,7 +1137,7 @@ li a {
     max-width: 900px !important;
   }
 
-  .letter{
+  .letter {
     width: 7.14% !important;
   }
 }
@@ -1207,16 +1206,16 @@ li a {
 }
 
 @media (max-width: 600px) {
-  .button-wrapper{
+  .button-wrapper {
     flex-direction: column;
   }
 
-  .button-wrapper a{
+  .button-wrapper a {
     justify-content: center;
     margin: 15px auto 20px auto;
   }
 
-  .buybutton{
+  .buybutton {
     margin: auto !important;
   }
 }
@@ -1238,7 +1237,7 @@ li a {
   color: #78b6fa !important;
 }
 
-.button-wrapper a svg{
+.button-wrapper a svg {
   border: 1px solid #78b6fa;
   border-radius: 50%;
 }
@@ -1259,7 +1258,7 @@ li a {
 }
 
 /*Letters*/
-.letter-row{
+.letter-row {
   display: flex;
   justify-content: center;
   margin-top: 20px;
@@ -1267,18 +1266,18 @@ li a {
   flex-wrap: wrap;
 }
 
-.letter{
+.letter {
   width: 3.7%;
   margin: 5px 0;
   text-align: center;
 }
 
-
-.letter a{
+.letter a {
   color: #78b6fa !important;
   display: block;
   padding: 5px 0;
   margin: 0 1px;
-  background-color: rgba(120,182,250,.05);
-  transition: background-color .3s cubic-bezier(.4,0,.2,1),color .3s cubic-bezier(.4,0,.2,1);
+  background-color: rgba(120, 182, 250, 0.05);
+  transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
